# mefikit

./: .gitignore  .pre-commit-config.yaml  .stubtest-allowlist  1_introduction.html  2_format.html  3_topology.html  404.html  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  TODO.md  config.toml  index.html  justfile  mefikit_pitch.md  print.html  pyproject.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-914c0c81.js  toc-49e3bc73.js  toc-a77cfc60.js  toc.html
.cargo/: config.toml
.github/workflows/: bench.yml  coverage.yml  maturin.yaml  mdbook.yml  rust.yml
benches/: submesh.rs  umesh.rs
crates/mefikit/: Cargo.toml
crates/mefikit-py/: Cargo.toml
crates/mefikit-py/src/: pyfield.rs  pyumesh.rs  select.rs
crates/mefikit/benches/: measure.rs  select.rs  submesh_analytics.rs
crates/mefikit/examples/: debug.rs  measure.rs  merge_nodes.rs  selection.rs  snap.rs
crates/mefikit/src/: lib.rs  mesh_examples.rs
crates/mefikit/src/element_traits/: cut.rs  element_geo.rs  element_topo.rs  is_in.rs  measures.rs  mod.rs  seg_intersect.rs  symmetry.rs  utils.rs
crates/mefikit/src/io/: error.rs  hdf_vtk.rs  hdfvtk_io.rs  mod.rs  serde_io.rs  vtk_io.rs
crates/mefikit/src/mesh/: connectivity.rs  dimension.rs  element.rs  element_block.rs  element_ids.rs  element_ids_set.rs  fields.rs  indirect_index.rs  mod.rs  umesh.rs
crates/mefikit/src/tools/: centroids.rs  connected_components.rs  crack.rs  delaunay.rs  extrude.rs  fieldexpr.rs  grid.rs  intersect.rs  measure.rs  mod.rs  neighbours.rs  polyze.rs  slice.rs  snap.rs  spatial_index.rs
crates/mefikit/src/tools/selector/: centroid.rs  element.rs  field.rs  mod.rs  selection.rs
crates/mefikit/tests/: integration_tests.rs
docs/python_examples/: geometric_tools.ipynb  selection.ipynb  topological_tools.ipynb  umesh_basics.ipynb
docs/src/: 1_introduction.md  2_format.md
docs/src/python_examples/: example_bubbles.md  input_output.md  selection.md  umesh_basics.md
examples/: compute_submesh.rs  debug.rs  selection.rs  write_mesh.rs
mefibook/: .gitignore  Makefile  book.toml  pyproject.toml
mefibook/python_examples/: example_bubbles.ipynb  extrusions.ipynb  fields.ipynb  geometric_tools.ipynb  input_output.ipynb  mefikit_demo.ipynb  neighbours_utilities.ipynb  selection.ipynb  topological_tools.ipynb  umesh_basics.ipynb
mefibook/src/: 1_introduction.md  3_topology.md  SUMMARY.md
mefibook/src/python_examples/: example_bubbles.md  extrusions.md  fields.md  geometric_tools.md  input_output.md  mefikit_demo.md  neighbours_utilities.md  selection.md  topological_tools.md  umesh_basics.md
meficore/: Cargo.toml
meficore/benches/: crack.rs  measure.rs  merge_nodes.rs  neighbours.rs  select.rs  snap.rs  snap_order.rs
meficore/examples/: bubbles.rs  crack.rs  merge_nodes.rs  selection.rs  write_mesh.rs
meficore/proptest-regressions/element_traits/: seg_intersect.txt  seg_intersect2.txt
meficore/src/: mesh_examples.rs
meficore/src/element_traits/: cut.rs  element_topo.rs  is_in.rs  mod.rs  seg_intersect.rs  seg_intersect2.rs  symmetry.rs  utils.rs
meficore/src/io/: serde_io.rs  vtk_io.rs
meficore/src/mesh/: connectivity.rs  element.rs  element_block.rs  element_ids.rs  element_ids_set.rs  fieldexpr.rs  fields.rs  indirect_index.rs  mod.rs  umesh.rs
meficore/src/tools/: README.md  connected_components.rs  crack.rs  extrude.rs  fieldexpr.rs  grid.rs  intersect.rs  measure.rs  mod.rs  neighbours.rs  selector.rs  snap.rs  spatial_index.rs
meficore/src/tools/selector/: binary.rs  centroid.rs  element.rs  field.rs  group.rs  mod.rs  node.rs  selection.rs
mefikit/: Cargo.toml
mefikit-py/: Cargo.toml  pyproject.toml
mefikit-py/python/mefikit/: __init__.py  data.py  io.py
mefikit-py/src/: lib.rs
mefikit-py/tests/: test_io.py  test_umesh.py
mefikit/benches/: crack.rs  merge_nodes.rs  neighbours.rs  select.rs  snap_bench.rs  umesh.rs  umesh_analytics.rs
mefikit/examples/: compute_submesh.rs  crack.rs  measure.rs  merge_nodes.rs  selection.rs  snap.rs  write_mesh.rs
mefikit/src/: builders.rs  geometry.rs  intersect.rs  lib.rs  mesh_examples.rs  selector.rs  topology.rs  umesh.rs
mefikit/src/algorithms/: crack.rs  intersect.rs  measure.rs  neighbours.rs  selector.rs  snap.rs
mefikit/src/builders/: extrude.rs  grid.rs
mefikit/src/element_traits/: element_geo.rs  seg_intersect.rs
mefikit/src/geometry/: measures.rs  mod.rs  seg_intersect.rs  snap.rs
mefikit/src/io/: mod.rs  serde_io.rs  vtk_io.rs
mefikit/src/mesh/: README.md  connectivity.rs  dimension.rs  element.rs  element_block.rs  element_ids.rs  indirect_index.rs  mod.rs  umesh.rs
mefikit/src/tools/: connected_components.rs  crack.rs  extrude.rs  grid.rs  intersect.rs  mod.rs  neighbours.rs  polyze.rs  selector.rs  snap.rs
mefikit/src/tools/selector/: binary.rs  centroid.rs  element.rs  group.rs  mod.rs  node.rs
mefikit/src/topology/: element_topo.rs  mod.rs  simplexize.rs  symmetry.rs
mefikit/src/umesh/: README.md  connectivity.rs  dataarray.rs  element.rs  element_block.rs  mod.rs  umesh.rs
mefipy/: Cargo.toml  pyproject.toml
mefipy/python/mefikit/: __init__.py  data.py  io.py
mefipy/src/: element.rs  element_ids.rs  lib.rs  pyfield.rs  pyfieldexpr.rs  pyumesh.rs  select.rs
mefipy/tests/: conftest.py
python_examples/: SUMMARY.html  example_bubbles.html  extrusions.html  fields.html  geometric_tools.html  input_output.html  selection.html  topological_tools.html  umesh_basics.html
src/: connectivity.rs  element.rs  element_block.rs  element_block_like.rs  geometry.rs  lib.rs  mesh_element.rs  selector.rs  topology.rs  umesh.rs
src/builders/: README.md  grid.rs
src/io/: mod.rs  serde_io.rs  vtk_io.rs
src/mefikit/: __init__.py  __init__.pyi  data.py  io.py
src/mefikit/mefipy/: __init__.pyi
src/topology/: mod.rs  neighbors.rs  symmetry.rs
src/umesh/: README.md  connectivity.rs  element.rs  element_block.rs  geometry.rs  measure.rs  mod.rs  selector.rs  umesh_access.rs  umesh_core.rs  umesh_view.rs  utils.rs
tests/: Box1.vtkhdf  conftest.py  pointcloud_tests.rs  test_umesh.py
(+1 files in other folders)
