[package]
name = "mefikit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.6.0"
hdf5 = { version = "0.8.1", optional = true }
ndarray = { version = "0.16", features = ["serde"] }
once_cell = "1.21.3"
rayon = "1.10.0"
robust = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
serde_yaml = "0.9.34"
vtkio = { version = "0.6.3", optional = true }

[features]
default = ["vtk"]
hdf5 = ["dep:hdf5"]
vtk = ["dep:vtkio"]

[lib]
bench = false

# ref: https://bheisler.github.io/criterion.rs/book/getting_started.html#step-1---add-dependency-to-cargotoml
[[bench]]
name = "umesh"
harness = false

[dev-dependencies]
approx = "0.5.1"
todo = "0.3.0"
