[workspace]
resolver = "3"
members = [
  "mefikit",
  "mefipy",
  # "mefikit-ffi",
]

[workspace.dependencies]
ndarray = { version = "0.17", features = ["serde"] }
arrayvec = "0.7.6"
derive-where = "1.6.0"
itertools = "0.14.0"
nalgebra = "0.34.1"
numpy = "0.27.1"
once_cell = "1.21.3"
petgraph = "0.8.3"
pyo3 = "0.27.2"
robust = "1.2.0"
rstar = "0.12.2"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
smallvec = "1.15.1"
vtkio = "0.7.0-rc1"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.release-safe]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
lto = false


[profile.flame]
inherits = "bench"
debug = true
lto = false
strip = false
