[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mefikit"
version = "0.1.0"
description = "Python bindings for the mefikit Rust library"
requires-python = ">=3.9"
authors = [{ name = "Aymeric SONOLET", email = "aymeric.sonolet@cea.fr" }]
dependencies = ["numpy"]

[project.optional-dependencies]
io = ["meshio[all]>=5.3.5", "medcoupling", "pyvista[all]>=0.46.4"]
all = ["mefikit[io]"]

[tool.maturin]
python-source = "src"
manifest-path = "crates/mefikit-py/Cargo.toml"
module-name = "mefikit.mefipy"

[tool.ruff.lint]
preview = true

[tool.uv]
package = false
default-groups = "all"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "medcoupling>=9.15.0",
    "pytest>=8.4.2",
    "pyvista>=0.46.5",
]
