[package]
name = "mefikit-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "mefikit"
crate-type = ["cdylib"]
bench = false

[dependencies]
mefikit = { path = "../mefikit" }
numpy = "0.25.0"
ndarray = "0.16.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
