[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mefikit"
version = "0.1.0"
description = "Python bindings for the mefikit Rust library"
requires-python = ">=3.9"
authors = [{ name = "Aymeric SONOLET", email = "aymeric.sonolet@cea.fr" }]
dependencies = ["numpy"]

[project.optional-dependencies]
io = ["meshio[all]>=5.3.5", "medcoupling", "pyvista[all]>=0.46.4"]

[tool.maturin]
python-source = "python"
module-name = "mefikit.mefikit"

[dependency-groups]
dev = ["pytest>=8.4.2", "jupyterlab"]
