cargo-features = ["edition2024"]

[package]
name = "mefikit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
derive-where = { version = "1.6.0", features = ["serde"] }
hdf5 = { version = "0.8.1", optional = true }
itertools = "0.14.0"
nalgebra = "0.34.0"
ndarray = { workspace = true, public = true }
once_cell = "1.21.3"
petgraph = { version = "0.8.2", public = true }
rayon = "1.10.0"
robust = "1.2.0"
rstar = "0.12.2"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
serde_yaml = "0.9.34"
smallvec = "1.15.1"
vtkio = { version = "0.7.0-rc1", optional = true }

[features]
default = ["vtk"]
hdf5 = ["dep:hdf5"]
vtk = ["dep:vtkio"]

[lib]
bench = false

# ref: https://bheisler.github.io/criterion.rs/book/getting_started.html#step-1---add-dependency-to-cargotoml
[[bench]]
name = "umesh"
harness = false

[[bench]]
name = "umesh_analytics"
harness = false

[dev-dependencies]
approx = "0.5.1"
criterion = "0.7.0"
gungraun = "0.17.0"
todo = "0.3.0"
