[package]
name = "mefipy"
version = "0.1.0"
edition = "2024"

[lib]
name = "mefipy"
crate-type = ["cdylib"]
bench = false

[dependencies]
ndarray = { workspace = true }
numpy = { workspace = true, public = true }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

mefikit = { path = "../meficore" }
