[package]
name = "mefikit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { workspace = true }
derive-where = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true, public = true }
once_cell = { workspace = true }
petgraph = { workspace = true }
rayon = { version = "1.11.0", optional = true }
robust = { workspace = true }
rstar = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["float_roundtrip"] }
serde_yaml = { workspace = true }
smallvec = { workspace = true }
vtkio = { workspace = true, optional = true }

[features]
default = ["io"]
io = ["dep:vtkio"]
rayon = ["dep:rayon"]

[lib]
bench = false
doctest = false

# ref: https://bheisler.github.io/criterion.rs/book/getting_started.html#step-1---add-dependency-to-cargotoml
[[bench]]
name = "neighbours"
harness = false

[[bench]]
name = "measure"
harness = false

[[bench]]
name = "snap"
harness = false

[[bench]]
name = "select"
harness = false

[[bench]]
name = "submesh_analytics"
harness = false

[[bench]]
name = "snap_order"
harness = false

[[bench]]
name = "crack"
harness = false

[[bench]]
name = "merge_nodes"
harness = false

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.1"
gungraun = "0.17.0"
proptest = "1.9.0"
scaling = "0.1.3"
todo = "0.3.0"
